[gd_scene load_steps=5 format=1]

[ext_resource path="res://ScoreStars.gd" type="Script" id=1]
[ext_resource path="res://QPF_assets/art/FilledStar.png" type="Texture" id=2]
[ext_resource path="res://QPF_assets/art/UnfilledStar.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "filled",
"speed": 0.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "unfilled",
"speed": 0.0
} ]

[node name="ScoreStars" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 200.0
margin/right = 40.0
margin/bottom = 240.0
script/script = ExtResource( 1 )

[node name="Star1" type="AnimatedSprite" parent="."]

transform/pos = Vector2( 151.317, 436.238 )
frames = SubResource( 1 )
animation = "unfilled"

[node name="Star2" type="AnimatedSprite" parent="."]

transform/pos = Vector2( 365.259, 377.252 )
frames = SubResource( 1 )
animation = "unfilled"

[node name="Star3" type="AnimatedSprite" parent="."]

transform/pos = Vector2( 579.975, 436.187 )
frames = SubResource( 1 )
animation = "unfilled"

[node name="ShowStarTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[connection signal="timeout" from="ShowStarTimer" to="." method="_on_ShowStarTimer_timeout"]


